# The following command make gazelle skip this file.
# In some cases, gazelle is not smart enough to generate the correct build rule
# Here gazelle failed to find the right proto files we are depending on, so to avoid gazelle mess up this file, we put ignore here.
# gazelle:ignore

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

genrule(
    name = "api_descriptor_v1",
    srcs = [
        "@com_github_googleapis_googleapis//:google/api/annotations.proto",
        "@com_google_protobuf//:well_known_protos",
        "group_manager.proto",
    ],
    outs = ["api_descriptor.proto.v1"],
    cmd = """$(location //external:protoc) $(location :group_manager.proto) \
        -I$$(dirname $(location @com_github_googleapis_googleapis//:google/api/annotations.proto)) \
        -I$$(dirname $(location @com_google_protobuf//:well_known_protos)) \
        --include_imports --descriptor_set_out=$@""",
    tools = ["//external:protoc"],
    # This section is not working right now, add manual tag to make it skipped when bazel build //...
    tags = ["manual"]
)

genrule(
    name = "api_descriptor_v2",
    srcs = [
        "@com_github_googleapis_googleapis//:google/api/annotations.proto",
        "@com_google_protobuf//:src/google/protobuf/duration.proto",
        "@com_google_protobuf//:src/google/protobuf/timestamp.proto",
        "@com_google_protobuf//:src/google/protobuf/empty.proto",
        "group_manager.proto",
    ],
    outs = ["api_descriptor.proto.v2"],
    cmd = """$(location //external:protoc) $(location :group_manager.proto) \
        -I$$(dirname $(location @com_github_googleapis_googleapis//:google/api/annotations.proto)) \
        -I$$(dirname $(location @com_google_protobuf//:src/google/protobuf/duration.proto)) \
        -I$$(dirname $(location @com_google_protobuf//:src/google/protobuf/timestamp.proto)) \
        -I$$(dirname $(location @com_google_protobuf//:src/google/protobuf/empty.proto)) \
        --include_imports --descriptor_set_out=$@""",
    tools = ["//external:protoc"],
    # This section is not working right now, add manual tag to make it skipped when bazel build //...
    tags = ["manual"]
)

proto_library(
    name = "galu_proto",
    srcs = ["group_manager.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_googleapis_googleapis//:api_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "galu_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/galu/api/v1",
    proto = ":galu_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_googleapis_googleapis//:api_go_proto",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
     ],
)

go_library(
    name = "go_default_library",
    embed = [":galu_go_proto"],
    importpath = "github.com/google/galu/api/v1",
    visibility = ["//visibility:public"],
)
